[package]
name = "axiom-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-integrity = { path = "../axiom-integrity" }
axiom-identity = { path = "../axiom-identity" }
axiom-state = { path = "../axiom-state" }
axiom-boundary = { path = "../axiom-boundary" }
axiom-sanctuary = { path = "../axiom-sanctuary" }
bincode = "1.3"